# stadium-coordinator

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt  test_results.txt  test_run_output.txt  verify_metro.py
.github/workflows/: ci.yml
.kiro/specs/stadium-coordinator/: .config.kiro  requirements.md  tasks.md  tasks.meta.json
components/: __init__.py  alert_card.py  chart_container.py  metric_card.py  navigation_card.py  recommendation_card.py  report_card.py  role_selector.py  status_badge.py  timeline_card.py
data/: bus_status.json  crowd_levels.csv  gate_occupancy.csv  medical_incidents.csv  metro_status.json  parking.csv  security_alerts.csv  vendor_inventory.csv  volunteer_availability.csv  weather.json
pages/: executive_reports.py  home.py  mission_control.py  scenario_simulator.py  stakeholder_coordinator.py
styles/: main.css
tests/: conftest.py  test_ai_integration.py  test_chart_theme.py  test_context_builder.py  test_data_loader.py  test_smoke.py
utils/: ai_integration.py  chart_theme.py  context_builder.py  data_loader.py
