[project]
name = "stadium-coordinator"
version = "1.0.0"
description = "Enterprise-grade operational coordination platform for live stadium events"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
    "pandas>=2.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["utils", "components"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
